k8s/challenge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      containers:
      - name: challenge
        image: stuwatts/challenge:v1.0
        ports:
        - containerPort: 8080
