k8s/challenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge
  labels:
    app: challenge
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: challenge
